# ai-mobile-shopping-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mobile_phones_data.json  pyproject.toml  run.py
app/: main.py
app/Chat_Workflow/: orchestrator.py
app/agents/: __init__.py  mobile_shopping_agent.py
app/api/v1/: api.py
app/api/v1/endpoints/: conversation.py  health.py
app/core/: config.py
app/db/: mongodb.py
app/models/: __init__.py  openai.py
app/prompts/: __init__.py  mobile_shopping_prompt.py
app/resources/: filtered_schemas.json
app/schemas/: __init__.py  conversation.py
app/services/: __init__.py  conversation_service.py  mobile_data_service.py
app/tools/: __init__.py  mobile_shopping_tools.py
app/utils/: chat_utils.py  log.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.tsx  InputArea.css  InputArea.tsx  MessageBubble.css  MessageBubble.tsx  MessageList.css  MessageList.tsx  ProductCards.css  ProductCards.tsx
frontend/src/services/: api.ts
